# redplanet

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml
.github/workflows/: rust.yml
examples/demo/: Makefile  boot.S  hello.c  linker.ld  uart.h
red-planet-cli/: Cargo.toml
red-planet-cli/src/: gdb.rs  main.rs  target.rs  tcp.rs  tui.rs
red-planet-cli/src/gdb/: base_ops.rs  breakpoints.rs  registers.rs  resume.rs  rv32-csrs.xml  step.rs
red-planet-core/: Cargo.toml
red-planet-core/src/: address_map.rs  address_range.rs  bus.rs  cs_registers.rs  instruction.rs  interrupt.rs  lib.rs  registers.rs  simulator.rs  system_bus.rs
red-planet-core/src/board/: mod.rs  system_bus.rs
red-planet-core/src/core/: clint.rs  control.rs  counter_control.rs  counters.rs  csr_specifier.rs  envcfg.rs  execute.rs  interrupts.rs  mconfig.rs  memory.rs  mmu.rs  mod.rs  status.rs  trap.rs
red-planet-core/src/resources/: mod.rs  plic.rs  ram.rs  rom.rs  uart.rs
red-planet-test/: Cargo.toml
red-planet-test/src/: main.rs
riscof-tests/: .gitignore  Dockerfile  Makefile  config.ini
riscof-tests/redplanet/: redplanet_isa.yaml  redplanet_platform.yaml  riscof_redplanet.py
riscof-tests/redplanet/env/: model_test.h
riscof-tests/sail_cSim/: riscof_sail_cSim.py
space-time/: Cargo.toml
space-time/src/: allocator.rs  array_storage.rs  change.rs  errors.rs  ids.rs  lib.rs  region.rs  snapshot.rs  table.rs  typemap.rs
