[package]
name = "red-planet-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
gdbstub = "0.7.1"
gdbstub_arch = "0.3.0"
goblin = "0.8.2"
log = "0.4.21"
red-planet-core = { path = "../red-planet-core" }
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.26.3"
tui-logger = "0.11.1"
tokio = { version = "1.38", features = ["full"] }
oneshot = "0.1.8"
tui-textarea = "0.4.0"
futures = "0.3.30"
