[package]
name = "red-planet-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
log = { version = "0.4.21", features = ["kv"] }
space-time = { path = "../space-time" }
static_assertions = "1.1.0"
thiserror = "1.0.59"
